<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>s40-ci-backend</artifactId>
        <groupId>com.nokia.ci</groupId>
        <version>2.6.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>com.nokia.ci</groupId>
    <artifactId>s40-ci-backend-ear</artifactId>
    <packaging>ear</packaging>

    <name>s40-ci-backend-ear</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <release.name>${project.name}</release.name>
    </properties>

    <profiles>
        <profile>
            <id>release</id>
            <properties>
                <release.name>${project.name}-${project.version}</release.name>
            </properties>
        </profile>
        <profile>
            <!--
            ***********************************************
            * DEBUG PROFILE CONFIGURATIONS
            ***********************************************
            -->
            <id>debug</id>
            <properties>
                <!-- Default import script -->
                <sqlImport>../s40-ci-backend-it/sql/import.sql</sqlImport>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>com.h2database</groupId>
                    <artifactId>h2</artifactId>
                    <version>${h2.version}</version>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <!--
                    *************************************************
                    * Start and stop database for debug.
                    *************************************************
                    -->
                    <plugin>
                        <groupId>com.nokia.maven.plugin.h2</groupId>
                        <artifactId>maven-h2-plugin</artifactId>
                        <version>${h2.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>start-h2</id>
                                <phase>pre-integration-test</phase>
                                <configuration>
                                    <systemProperties>
                                        <property>
                                            <name>h2.bindAddress</name>
                                            <value>${testDBBindAddress}</value>
                                        </property>
                                    </systemProperties>
                                    <arguments>
                                        <argument>-tcpPort</argument>
                                        <argument>${testDBPort}</argument>
                                    </arguments>
                                </configuration>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>stop-h2</id>
                                <phase>post-integration-test</phase>
                                <configuration>
                                    <url>tcp://${testDBBindAddress}:${testDBPort}</url>
                                </configuration>
                                <goals>
                                    <goal>stop</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!--
                    *************************************************
                    * Start container with deployment for debuging.
                    *************************************************
                    -->
                    <plugin>
                        <groupId>org.codehaus.cargo</groupId>
                        <artifactId>cargo-maven2-plugin</artifactId>
                        <version>${cargo.version}</version>
                        <configuration>
                            <container>
                                <type>installed</type>
                                <containerId>${cargoContainerId}</containerId>
                                <artifactInstaller>
                                    <groupId>org.jboss.as</groupId>
                                    <artifactId>jboss-as-dist</artifactId>
                                    <version>${jboss.version}</version>
                                    <type>zip</type>
                                </artifactInstaller>
                                <systemProperties>
                                    <jboss.bind.address>${jboss.bind.address}</jboss.bind.address>
                                </systemProperties>
                                <dependencies>
                                    <dependency>
                                        <groupId>com.h2database</groupId>
                                        <artifactId>h2</artifactId>
                                    </dependency>
                                </dependencies>
                            </container>
                            <configuration>
                                <type>standalone</type>
                                <configfiles>
                                    <configfile>
                                        <file>${project.parent.basedir}/config/jboss/dev/standalone-full-ha.xml</file>
                                        <tofile>standalone.xml</tofile>
                                        <todir>configuration</todir>
                                    </configfile>
                                    <configfile>
                                        <file>${project.parent.basedir}/config/jboss/dev/mgmt-users.properties</file>
                                        <todir>configuration</todir>
                                    </configfile>
                                    <configfile>
                                        <file>${project.parent.basedir}/config/jboss/dev/logging.properties</file>
                                        <todir>configuration</todir>
                                    </configfile>
                                </configfiles>
                                <properties>
                                    <cargo.servlet.port>${cargoServletPort}</cargo.servlet.port>
                                    <cargo.rmi.port>${cargoRmiPort}</cargo.rmi.port>
                                    <cargo.jdbc.url>${testDBJdbcUrl}</cargo.jdbc.url>
                                    <cargo.database.schema>${testDBSchema}</cargo.database.schema>
                                    <cargo.jvmargs>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n -XX:MaxPermSize=256m -Djgroups.bind_addr=127.0.0.1 -Djava.net.preferIPv4Stack=true</cargo.jvmargs>
                                </properties>
                                <deployables>
                                    <deployable>
                                        <groupId>com.nokia.ci</groupId>
                                        <artifactId>s40-ci-backend-ear</artifactId>
                                        <type>ear</type>
                                        <pingURL>${cargoPingUrl}/s40ci</pingURL>
                                        <pingTimeout>600000</pingTimeout>
                                    </deployable>
                                </deployables>
                            </configuration>
                            <deployer>
                                <type>installed</type>
                            </deployer>
                        </configuration>
                        <executions>
                            <execution>
                                <id>start-container</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!--
                    *************************************************
                    * Populating database from SQL script.
                    *************************************************
                    -->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>sql-maven-plugin</artifactId>
                        <version>1.5</version>
                        <dependencies>
                            <!-- specify the dependent JDBC driver here -->
                            <dependency>
                                <groupId>com.h2database</groupId>
                                <artifactId>h2</artifactId>
                                <version>${h2.version}</version>
                            </dependency>
                        </dependencies>
                        <!-- common configuration shared by all executions -->
                        <configuration>
                            <forceMojoExecution>true</forceMojoExecution>
                            <driver>org.h2.Driver</driver>
                            <url>${testDBJdbcUrl}</url>
                            <username>test</username>
                            <password>test</password>
                        </configuration>
                        <executions>
                            <execution>
                                <id>default-cli</id>
                                <goals>
                                    <goal>execute</goal>
                                </goals>
                                <!-- specific configuration for this execution -->
                                <configuration>
                                    <srcFiles>
                                        <srcFile>${sqlImport}</srcFile>
                                    </srcFiles>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!--
            ***********************************************
            * REDEPLOY EAR
            ***********************************************
            -->
            <id>deploy-ear</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.cargo</groupId>
                        <artifactId>cargo-maven2-plugin</artifactId>
                        <version>${cargo.version}</version>
                        <executions>
                            <execution>
                                <id>re-deploy-ear</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>redeploy</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <container>
                                <containerId>jboss71x</containerId>
                                <home>target/cargo</home>
                            </container>
                            <!-- Deployer configuration -->
                            <deployer>
                                <type>installed</type>
                                <deployables>
                                    <deployable>
                                        <groupId>com.nokia.ci</groupId>
                                        <artifactId>s40-ci-backend-ear</artifactId>
                                        <type>ear</type>
                                    </deployable>
                                </deployables>
                            </deployer>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ear-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <version>6</version>
                    <applicationName>${project.name}</applicationName>
                    <displayName>S40 CI Backend EAR</displayName>
                    <defaultLibBundleDir>lib</defaultLibBundleDir>
                    <archive>
                        <manifestEntries>
                            <Dependencies>org.slf4j</Dependencies>
                        </manifestEntries>
                    </archive>
                    <modules>
                        <webModule>
                            <groupId>com.nokia.ci</groupId>
                            <artifactId>s40-ci-backend-web</artifactId>
                            <contextRoot>/s40ci</contextRoot>
                        </webModule>
                        <webModule>
                            <groupId>com.nokia.ci</groupId>
                            <artifactId>s40-ci-backend-ui</artifactId>
                            <contextRoot>/</contextRoot>
                        </webModule>
                    </modules>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.nokia.ci</groupId>
            <artifactId>s40-ci-backend-ejb</artifactId>
            <version>${project.parent.version}</version>
            <type>ejb</type>
            <exclusions>
                <exclusion>
                    <artifactId>hibernate-core</artifactId>
                    <groupId>org.hibernate</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>infinispan-core</artifactId>
                    <groupId>org.infinispan</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.nokia.ci</groupId>
            <artifactId>s40-ci-backend-web</artifactId>
            <version>${project.parent.version}</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.nokia.ci</groupId>
            <artifactId>s40-ci-backend-ui</artifactId>
            <version>${project.parent.version}</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
    </dependencies>
</project>
